Fix modal-proceso1 box on mobile version

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -996,6 +996,7 @@
     position: relative;
     z-index: 999;
     max-height: 100%;
+    width: 100%;
   }
 
   .modal-proceso1-divisor {
@@ -1008,7 +1009,6 @@
   .modal-proceso1-divisor > img{
     width: 100%;
     height: 150px;
-    
   }
 
   .proceso-modal-title {
